--- a/index.html
+++ b/index.html
@@ -176,6 +176,37 @@ function setupFilters() {
         div.innerHTML = `<label>${col.name}</label><select class="filter-select" data-idx="${col.idx}" onchange="runSimulation()"><option value="all">ALL</option>${uniqueValues.map(v => `<option value="${v}">${v}</option>`).join('')}</select>`;
         container.appendChild(div);
     });
+    if (col.name.includes("居住地方")) {
+  const regionOrder = ["北海道・東北地方","関東地方","中部地方","近畿地方","中国・四国地方","九州・沖縄地方"];
+  values.sort((a, b) => {
+    const ai = regionOrder.indexOf(a);
+    const bi = regionOrder.indexOf(b);
+    return (ai === -1 ? 999 : ai) - (bi === -1 ? 999 : bi);
+  });
+}
+
+if (col.name.includes("世帯年収")) {
+  const incomeOrder = [
+    "400万未満",
+    "400〜800万未満",
+    "800～1200万未満",
+    "1200万以上",
+    "わからない"
+  ];
+  values.sort((a, b) => {
+    const ai = incomeOrder.indexOf(a);
+    const bi = incomeOrder.indexOf(b);
+    return (ai === -1 ? 999 : ai) - (bi === -1 ? 999 : bi);
+  });
+}
+
+// 👇 どちらにも当てはまらない列だけデフォルトソート
+if (
+  !col.name.includes("居住地方") &&
+  !col.name.includes("世帯年収")
+) {
+  values.sort();
+}
 }
 
 function setupPsychList() {
