--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <div class="container">
     <header>
         <div class="header-top">
-            <h1 style="font-weight: 300; letter-spacing: 0.1em; margin:0;">Architecture Psychology Engine</h1>
+            <h1 style="font-weight: 300; letter-spacing: 0.1em; margin:0;">ウェルビーイングと空間要素</h1>
             <a class="nav-link" onclick="openAbout()">ABOUT US</a>
         </div>
         <div class="title-row" style="margin-top:20px;">
