--- a/index.html
+++ b/index.html
@@ -153,40 +153,39 @@ function closeAbout() { document.getElementById('aboutModal').style.display = "n
 window.onclick = function(event) { if (event.target == document.getElementById('aboutModal')) closeAbout(); }
 
 const imageUrlMap = {
-  "心地のよい居場所がある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x142_webp_a99830ec-ad0c-4b83-af07-9712e7573259.png",
-  "快適な室温を保つことができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x142_webp_db45356c-6acc-408f-b887-89d8c508dc7d.png",
-  "快適に感じる広さがある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_63c604f4-dbd1-430f-9818-0f1c12e38b32.png",
-  "快適に感じる天井の高さがある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_41032e89-f4e9-4eeb-a7de-bb8e03c7b0a8.png",
-  "窓からの日当たりが気持ちよい": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_2d3a9102-6587-42e7-be71-9e80d3f72fe8.png",
-  "窓からの風通しが気持ちよい": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_20538102-f7e0-40d3-92c7-87e4047d3c60.png",
-  "窓からの眺めがよい": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_b1bd8cce-0e01-40a4-bd59-3ff40188a9b1.png",
-  "快適なテラス（縁側）がある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_36a94638-f1f3-4984-ab65-87ff35de73c0.png",
-  "雰囲気のよい照明がある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_70ba8f61-0566-4f80-9bbf-43d8656b4b94.png",
-  "見通しがよく、空間全体を見渡せる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_9b611a5c-b548-486d-819a-771f25882a63.png",
-  "開放感があり気持ちよい": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x142_webp_bd2f4281-0875-4b85-9643-a9d4152e0819.png",
-  "よい香りがしていて快適である": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_ad6b2381-7355-47fd-8644-8c22d964a9ab.png",
-  "身近に自然を感じることができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_acdf1c17-5336-4043-9fed-0b97ee9b4ce3.png",
-  "建材に自然素材（木の板など）が多く用いられている": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_fe502da2-d080-47bd-a108-69e29d197a0d.png",
-  "みんなで集まる快適な場所がある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_8c0aa027-950e-4850-b84d-1bd434b92b9b.png",
-  "快適に食事を摂ることができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x142_webp_d37c5903-4bf2-42ef-ae9d-17b19014e261.png",
-  "快適に睡眠（仮眠）を摂ることができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x142_webp_b006e411-9caf-4959-8793-3f4cc67198d7.png",
-  "快適なトイレがある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_fc0bc73f-f6f7-46c3-ae62-cb869bfe9955.png",
-  "清掃などによって清潔な状態に保たれている": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_93739dfa-0c0f-4cc7-8faf-8d3abc77f95b.png",
-  "家具のレイアウト等を自由に変えることができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_c4a5ba4c-2a56-4d0b-b007-6b680556f17b.png",
-  "建具を開閉すること等により空間を自由に使うことができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_39d07e65-860a-45be-ab64-b8ae03b0c418.png",
-  "好みの壁紙に変えたり、カスタマイズすることができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_deb6fa9f-7a66-42e1-a815-d8d9c7d50b55.png",
-  "自分自身の個性を表現することができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_444d3d96-2ff9-4331-883d-a59029fe959a.png",
-  "好きな時に好きなところへ移動ができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_c5a3d3c1-be55-4186-b9ad-5bcd229169db.png",
-  "自由に過ごし方を決めることができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_1bf719ed-086d-406a-90a9-02ec92e1cf5e.png",
-  "用途がない空間に心地よさを感じる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_28dbd1f9-6f98-4244-9e0d-bfc763d0f9e5.png",
-  "芸術を楽しむことができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_d49a2ee1-cb28-4ae9-b2b4-4f54a2426538.png",
-  "自分以外の誰かとコミュニケーションを取りやすい": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_3a37db49-ad55-457d-9de6-fbbdd2487b29.png",
-  "自分以外の誰かと適度な距離感を保てて快適である": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_31373c16-7990-412d-8f95-0eb99bc15222.png",
-  "自分以外の人の視線が気にならない": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_b48f351d-4555-4258-8983-2cdc80bd15c1.png",
-  "気を使わずに行動できる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_2843b486-1c82-49bc-b19b-4d5afbd74185.png",
-  "快適に使用できる家具がある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_606a2196-b901-4873-a412-7bd5694ee390.png",
-  "芸術作品が身近にある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_7faad49e-9174-4288-8602-45afb2a4db51.png",
-  "植物（観葉植物、生花）が置かれている": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-266x141_webp_66c2c41b-a00b-4a8c-9cc9-237d0b5fdfef.png"
+ "地震による大きな被害の心配をしていない": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_7b44bd1a-fd60-49ab-80df-9c8c1daf0e5b.png",
+"台風や豪雨による大きな被害の心配をしていない": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x248_webp_fd5730dc-6272-4cd4-9e50-15f4bef56725.png",
+"泥棒や不審者が侵入する心配はない": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_c550557a-f4bb-46a2-ade5-12a9a3118a3a.png",
+"屋外の騒音が気にならない": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_bcbeab9e-385d-49c4-bcac-a00b11bc42fa.png",
+"外からの視線が気にならない": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_98a7e1cb-1372-4ed5-aeb8-077f15c3c0e2.png",
+"心地のよい居場所がある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_ffef9cd5-c1b5-4db9-8277-331ac3486abd.png",
+"快適な室温を保つことができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-467x247_webp_7629dabb-9c2e-41d4-9aeb-3a3a5dc96e66.png",
+"快適に感じる広さがある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_4059dea2-cf9f-42b9-a51b-dbf7263ce254.png",
+"快適に感じる天井の高さがある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_686ea138-9992-4560-8fe6-c59c008d3546.png",
+"窓からの日当たりが気持ちよい": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-467x247_webp_1870a91d-0249-454a-99b8-b1848081753c.png",
+"窓からの風通しが気持ちよい": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_24f5f493-954b-4db6-a657-cacf6f34c33b.png",
+"窓からの眺めがよい": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_6ab0ce3c-8822-437b-b5fe-bb779f303655.png",
+"快適なテラス（縁側）がある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x248_webp_2860e1c8-44e9-4094-9a29-7d331474d685.png",
+"雰囲気のよい照明がある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_45dc4fcb-97f3-4dff-bd09-baae94b51769.png",
+"見通しがよく、空間全体を見渡せる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_30fdd1c6-6c78-464b-889a-26ea98b61c89.png",
+"開放感があり気持ちよい": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_f549390f-21e2-4d07-a108-df91bb083f12.png",
+"よい香りがしていて快適である": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_fc110954-0bfa-4b4b-84d2-d7017fe0d5f7.png",
+"身近に自然を感じることができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_fbd1e7aa-b875-4063-9a61-56b4ffa92fba.png",
+"建材に自然素材（木の板など）が多く用いられている": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_76d7740e-c064-4d3c-b850-d54c2e54d460.png",
+"みんなで集まる快適な場所がある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_64a6c228-ce44-4a1b-9134-e825af27790b.png",
+"快適に食事を摂ることができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-374x199_webp_9ec8abd2-5ded-4059-a84d-aa5648610c1a.png",
+"快適に睡眠（仮眠）を摂ることができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_ad98d7e0-ac2f-4932-848e-d9c73ceb04d5.png",
+"快適なトイレがある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_285d53dc-4fa0-459e-be99-2476aa9b0047.png",
+"清掃などによって清潔な状態に保たれている": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_eebe0339-ef38-43c7-b649-daae88880f53.png",
+"浴室（シャワー室）、洗面室で自分自身を清潔に保つことができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_335fe411-7502-463a-94a1-f21691a17d06.png",
+"家具のレイアウト等を自由に変えることができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_b122d7fa-6f96-46ba-ad85-fd162c75cf90.png",
+"建具を開閉すること等により空間を自由に使うことができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x248_webp_8dc5d578-4044-480f-989c-54d77f5e4327.png",
+"好みの壁紙に変えたり、カスタマイズすることができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_96e914a0-0901-4297-aa09-5d3acf092aee.png",
+"自分自身の個性を表現することができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_7cef425c-165e-4cff-a415-68abd0ff0112.png",
+"壁に近い位置が心地よい": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_075df169-b298-4b58-9e09-ea50fcc21743.png",
+"窓に近い位置が心地よい": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_7a6780a3-4516-411b-b1df-2fdd8caa345c.png",
+"好きな時に好きなところへ移動ができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_26016f2f-206f-40e9-9035-e4a06955af48.png",
+"目的の場所に合理的な経路で移動ができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_686ea138-9992-4560-8fe6-c59c008d3546.png",
 };
 
 function superNormalize(s) { return s ? String(s).replace(/[\s\n\r（）\(\)]/g, "") : ""; }
