--- a/index.html
+++ b/index.html
@@ -186,6 +186,19 @@ const imageUrlMap = {
 "窓に近い位置が心地よい": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_7a6780a3-4516-411b-b1df-2fdd8caa345c.png",
 "好きな時に好きなところへ移動ができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_26016f2f-206f-40e9-9035-e4a06955af48.png",
 "目的の場所に合理的な経路で移動ができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_686ea138-9992-4560-8fe6-c59c008d3546.png",
+"自由に過ごし方を決めることができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_bb7a27fa-eba7-4964-b030-ca4fc088f776.png",
+"用途がない空間に心地よさを感じる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_5a5e503f-bd93-4ace-903c-5792c6fd9604.png",
+"芸術を楽しむことができる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_e4598144-1f48-4c79-a49c-3065f281aa45.png",
+"自分以外の誰かとコミュニケーションを取りやすい": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_7467e6d7-bae2-44bf-b5c1-68929d11ae80.png",
+"自分以外の誰かと適度な距離感を保てて快適である": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_25795e35-cca3-4510-933f-1f982dd5d17a.png",
+"自分以外の人の視線が気にならない": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-467x247_webp_5919edb8-c86c-425d-88d5-0de4d00be8ca.png",
+"気を使わずに行動できる": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_3ca5c842-3887-483e-b7d4-b1fb7932a702.png",
+"全体として、物が少なくて快適である": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_637e6864-1434-43f6-8a48-5d4b47891a2d.png",
+"全体として、物が多くて快適である": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_055b15b4-0d8a-48de-a616-85ddfaaf84d6.png",
+"快適に使用できる家具がある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_eeda0058-1cd6-4bba-b886-81bba4320855.png",
+"芸術作品が身近にある": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_10adf594-3f01-4577-8251-330dd80ed848.png",
+"植物（観葉植物、生花）が置かれている": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x247_webp_10efae1b-0f37-4d85-a013-82b1756e426c.png",
+"好きな物が多くて楽しい": "https://storage.googleapis.com/studio-design-asset-files/projects/rROn1rzYWA/s-466x248_webp_ddf648dc-b926-4ee6-9b0f-218d09e4c5ec.png",
 };
 
 function superNormalize(s) { return s ? String(s).replace(/[\s\n\r（）\(\)]/g, "") : ""; }
