--- a/index.html
+++ b/index.html
@@ -15,27 +15,12 @@
         body { font-family: "Helvetica Neue", Arial, "Hiragino Sans", sans-serif; background: var(--bg); color: var(--text); margin: 0; padding: 0; overflow-x: hidden; }
         .container { max-width: 1400px; margin: 0 auto; padding: 40px 20px; }
         
-        header { 
-            border-bottom: 1px solid var(--primary); 
-            margin-bottom: 30px; 
-            padding-bottom: 20px; 
-            display: flex; 
-            flex-direction: column; 
-        }
+        header { border-bottom: 1px solid var(--primary); margin-bottom: 30px; padding-bottom: 20px; display: flex; flex-direction: column; }
         .header-top { display: flex; justify-content: space-between; align-items: center; width: 100%; }
         
         .print-btn {
-            background: var(--primary);
-            color: #fff;
-            padding: 10px 25px;
-            font-size: 0.8rem;
-            letter-spacing: 0.2em;
-            cursor: pointer;
-            border: none;
-            transition: 0.3s;
-            display: flex;
-            align-items: center;
-            gap: 10px;
+            background: var(--primary); color: #fff; padding: 10px 25px; font-size: 0.8rem;
+            letter-spacing: 0.2em; cursor: pointer; border: none; transition: 0.3s; display: flex; align-items: center; gap: 10px;
         }
         .print-btn:hover { opacity: 0.8; transform: translateY(-2px); }
 
@@ -270,7 +255,7 @@ function runSimulation() {
     renderGrid('grid-office', 'n-office', officeData, targetIdx);
 }
 
-// プレビュー画面の生成
+// プレビュー画面生成
 function generatePreview() {
     const targetSelect = document.getElementById('target-psychology');
     const targetText = targetSelect.options[targetSelect.selectedIndex].text;
@@ -282,41 +267,41 @@ function generatePreview() {
         <head>
             <title>Preview: ウェルビーイングと空間要素</title>
             <style>
-                body { font-family: sans-serif; padding: 40px; color: #333; background: #525659; display: flex; justify-content: center; }
-                .page { background: white; width: 210mm; min-height: 297mm; padding: 20mm; box-shadow: 0 0 20px rgba(0,0,0,0.5); box-sizing: border-box; }
-                .header { border-bottom: 2px solid #000; padding-bottom: 10px; margin-bottom: 20px; }
-                .title { font-size: 1.4rem; margin: 0; font-weight: bold; }
-                .meta-box { background: #f5f5f5; padding: 15px; margin-bottom: 20px; font-size: 0.8rem; border: 1px solid #eee; }
+                body { font-family: sans-serif; padding: 20px; color: #333; background: #525659; display: flex; flex-direction: column; align-items: center; }
+                .page { background: white; width: 210mm; height: 296mm; padding: 15mm; box-shadow: 0 0 20px rgba(0,0,0,0.5); box-sizing: border-box; overflow: hidden; position: relative; }
+                .header { border-bottom: 2px solid #000; padding-bottom: 10px; margin-bottom: 15px; }
+                .title { font-size: 1.3rem; margin: 0; font-weight: bold; }
+                .meta-box { background: #f5f5f5; padding: 12px; margin-bottom: 15px; font-size: 0.75rem; border: 1px solid #eee; }
                 .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
-                .col-title { background: #000; color: #fff; text-align: center; padding: 5px; font-size: 0.75rem; margin-bottom: 10px; }
-                .item-row { display: flex; align-items: center; border-bottom: 1px solid #eee; padding: 5px 0; font-size: 0.65rem; page-break-inside: avoid; }
+                .col-title { background: #000; color: #fff; text-align: center; padding: 4px; font-size: 0.7rem; margin-bottom: 10px; }
+                .item-row { display: flex; align-items: center; border-bottom: 1px solid #eee; padding: 4px 0; font-size: 0.62rem; }
                 .rank { width: 15px; color: #999; font-weight: bold; }
-                .img-thumb { width: 40px; height: 25px; object-fit: cover; margin: 0 10px; border: 1px solid #eee; }
-                .label { flex-grow: 1; margin-right: 10px; line-height: 1.2; }
-                .val { font-weight: bold; font-family: serif; font-size: 0.9rem; }
-                .btn-area { position: fixed; top: 20px; right: 20px; z-index: 100; }
-                .dl-btn { background: #d4a373; color: white; border: none; padding: 15px 30px; cursor: pointer; font-weight: bold; box-shadow: 0 4px 10px rgba(0,0,0,0.3); }
+                .img-thumb { width: 45px; height: 28px; object-fit: cover; margin: 0 10px; border: 1px solid #eee; }
+                .label { flex-grow: 1; margin-right: 8px; line-height: 1.1; }
+                .val { font-weight: bold; font-size: 0.85rem; }
+                .btn-area { margin-bottom: 20px; }
+                .dl-btn { background: #d4a373; color: white; border: none; padding: 12px 30px; cursor: pointer; font-weight: bold; }
+                @media print { .btn-area { display: none; } body { background: none; padding: 0; } .page { box-shadow: none; } }
             </style>
         </head>
         <body>
-            <div class="btn-area"><button class="dl-btn" onclick="window.parent.exportPDF(document.getElementById('pdf-root'), '${targetText}')">PDFとして保存・印刷</button></div>
+            <div class="btn-area"><button class="dl-btn" onclick="window.parent.exportPDF(document.getElementById('pdf-root'), '${targetText}')">PDFを保存</button></div>
             <div class="page" id="pdf-root">
                 <div class="header">
                     <div class="title">ウェルビーイングと空間要素</div>
-                    <div style="font-size: 0.7rem; color: #666; margin-top: 5px;">Architecture Psychology Correlation Report</div>
+                    <div style="font-size: 0.65rem; color: #666; margin-top: 3px;">Architecture Psychology Correlation Report</div>
                 </div>
                 <div class="meta-box">
-                    <strong>Target Psychology:</strong> ${targetText}<br>
-                    <strong>Attributes:</strong> ${filterInfo}
+                    <strong>Target Psychology:</strong> ${targetText} | <strong>Attributes:</strong> ${filterInfo}
                 </div>
                 <div class="grid">
                     ${['Residential', 'Office'].map(type => {
                         const gridId = type === 'Residential' ? 'grid-housing' : 'grid-office';
-                        const nText = document.getElementById(type === 'Residential' ? 'n-housing' : 'n-office').innerText;
+                        const nVal = document.getElementById(type === 'Residential' ? 'n-housing' : 'n-office').innerText;
                         const cards = Array.from(document.getElementById(gridId).querySelectorAll('.card')).slice(0, 10);
                         return `
                             <div>
-                                <div class="col-title">${type} (${nText})</div>
+                                <div class="col-title">${type} (${nVal})</div>
                                 ${cards.map((card, idx) => {
                                     const label = card.querySelector('.card-label').innerText;
                                     const val = card.querySelector('.r-value').innerText;
@@ -334,7 +319,7 @@ function generatePreview() {
                         `;
                     }).join('')}
                 </div>
-                <div style="margin-top: 30px; font-size: 0.6rem; color: #999; text-align: center; border-top: 1px solid #eee; padding-top: 10px;">
+                <div style="position: absolute; bottom: 15mm; width: calc(100% - 30mm); font-size: 0.55rem; color: #999; text-align: center; border-top: 1px solid #eee; padding-top: 8px;">
                     ※ 本データは統計的相関を示すものであり、因果関係を保証するものではありません。
                 </div>
             </div>
@@ -343,10 +328,9 @@ function generatePreview() {
     `);
     win.document.close();
 
-    // 子ウィンドウから親のPDF出力関数を呼び出すためのブリッジ
     win.exportPDF = (element, title) => {
         const opt = {
-            margin: 10,
+            margin: 0,
             filename: `ウェルビーイングと空間要素_${title}.pdf`,
             image: { type: 'jpeg', quality: 0.98 },
             html2canvas: { scale: 3, useCORS: true },
