--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             --primary: #1a1a1a; --accent-pos: #d4a373; --accent-neg: #457b9d;
             --bg: #f8f8f8; --card-bg: #ffffff; --text: #222; --border: #eeeeee;
         }
-        body { font-family: "Helvetica Neue", Arial, "Hiragino Sans", sans-serif; background: var(--bg); color: var(--text); margin: 0; padding: 0; overflow-x: hidden; }
+        body { font-family:"教科書体", "UDデジタル教科書体", "Helvetica Neue", Arial, "Hiragino Sans", sans-serif; background: var(--bg); color: var(--text); margin: 0; padding: 0; overflow-x: hidden; }
         .container { max-width: 1400px; margin: 0 auto; padding: 40px 20px; }
         
         header { border-bottom: 0px solid var(--primary); margin-bottom: 10px; padding-bottom: 20px; display: flex; flex-direction: column; }
