--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ function generatePreview() {
         <head>
             <title>Preview: ウェルビーイングと空間要素</title>
             <style>
-                body { font-family: sans-serif; padding: 20px; color: #333; background: #525659; display: flex; flex-direction: column; align-items: center; }
+                body { font-family: "Klee One", cursive, "Helvetica Neue", Arial, "Hiragino Sans", sans-serif; padding: 20px; color: #333; background: #525659; display: flex; flex-direction: column; align-items: center; }
                 .page { background: white; width: 210mm; height: 296mm; padding: 15mm; box-shadow: 0 0 20px rgba(0,0,0,0.5); box-sizing: border-box; overflow: hidden; position: relative; }
                 .header { border-bottom: 2px solid #000; padding-bottom: 10px; margin-bottom: 15px; }
                 .title { font-size: 1.3rem; margin: 0; font-weight: 600; }
