--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
     <div id="results-area" style="display:none;">
         <div class="comparison-layout">
             <div class="column">
-                <div class="column-header">Residential <div class="n-badge" id="n-housing">N=0</div></div>
+                <div class="column-header">住宅 <div class="n-badge" id="n-housing">N=0</div></div>
                 <div class="card-grid" id="grid-housing"></div>
             </div>
             <div class="column">
-                <div class="column-header">Office <div class="n-badge" id="n-office">N=0</div></div>
+                <div class="column-header">オフィス <div class="n-badge" id="n-office">N=0</div></div>
                 <div class="card-grid" id="grid-office"></div>
             </div>
         </div>
