--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         }
         body { font-family: "Klee One", cursive, "Helvetica Neue", Arial, "Hiragino Sans", sans-serif; background: var(--bg); color: var(--text); margin: 0; padding: 0; overflow-x: hidden; }
         .container { max-width: 1400px; margin: 0 auto; padding: 40px 80px; }
+
+        @media screen and (max-width: 767px) {
+          .container {
+              width: 100%; /* スマホ横幅を全幅にする */
+              padding: 10px;
+          }
+        }
         
         header { border-bottom: 0px solid var(--primary); margin-bottom: 10px; padding-bottom: 20px; display: flex; flex-direction: column; }
         .header-top { display: flex; justify-content: space-between; align-items: center; width: 100%; }
