--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         @media screen and (max-width: 767px) {
           .container {
-              width: 100%; /* スマホ横幅を全幅にする */
+              width: auto; /* スマホ横幅を全幅にする */
               padding: 10px;
           }
         }
