--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Klee+One:wght@400;600&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary: #4d4d4d; --accent-pos: #d4a373; --accent-neg: #457b9d;
+            --primary: #333333; --accent-pos: #d4a373; --accent-neg: #457b9d;
             --bg: #FFFFFF; --card-bg: #ffffff; --text: #222; --border: #eeeeee;
         }
         body { font-family: "Klee One", cursive, "Helvetica Neue", Arial, "Hiragino Sans", sans-serif; background: var(--bg); color: var(--text); margin: 0; padding: 0; overflow-x: hidden; }
