--- a/index.html
+++ b/index.html
@@ -137,23 +137,23 @@
         <span class="close-modal" onclick="closeAbout()">&times;</span>
         <h2>本ツール作成の背景と、ウェルビーイング空間設計プロジェクト（仮）について</h2>
         
-        <h3>■ 私たちについて</h3>
+        <h3>私たちについて</h3>
         <p>ウェルビーイング空間設計プロジェクト（仮）は、建築物を発注する人やデザインする人、施工する人、実際に使う人など、建築にかかわるすべての人が、そのプロセスやアウトプットにおいて「居心地のよさ」を感じられることを目指しています。</p>
         <p>周知の通り、建築物は、世の中にあるそのほかの製作物と同様に、それをつくるプロセスや使われていくあいだにおいて、さまざまな人や組織が関わっています。それぞれが役割を持ち、つくられ使われることで、社会が営まれています。</p>
         <p>現代社会において、ほとんどの活動が、建築物のなかで行われていることを考えると、良い社会をつくり、営むということにおいて、建築物は大きな責任を負っていると考えます。つまり、居心地よくつくられ、居心地よく使われる建築物というあり方を目指すことは、よりよい社会をつくることにつながると私たちは考えています。</p>
 
-        <h3>■ 建築設計や施工に関わる人々の「めやす」として</h3>
+        <h3>建築設計や施工に関わる人々の「めやす」として</h3>
         <p>しかし、その「居心地のよい空間や建築物」を作り出すための明確な基準が、世の中にはまだありません。予算や敷地面積など限られた条件のなかで、建築要素の何を優先することが、「居心地のよさ」につながるのでしょうか。天井高でしょうか？それとも窓の大きさでしょうか？</p>
         <p>これまでは、デザイナーや設計者の経験値や施主の想いなどをもとにつくられてきた「居心地のよさ」ですが、それは時に「ひとりよがり」となり、真の「居心地のよさ」にはつながっていないケースもあると思われます。</p>
         <p>もちろん、「居心地のよさ」は個人の主観であり、数値的には測れないものがほとんどかもしれません。しかし、先ほども述べたとおり、建築物はたくさんの人がチームとなり、多様な技術や知識を結集してつくられます。そのプロセスにおいて、それぞれが多様な能力を発揮するための「めやす」のようなものの必要性を感じ、本プロジェクトがスタートしました。</p>
         <p>本ツールが、居心地のよいプロセスで作られた居心地のよい建築物をつくる一助となり、使う人の居心地のよい空間と時間、よりよい社会へとつながっていくことを願っています。</p>
 
-        <h3>■ 調査対象と方法</h3>
+        <h3>調査対象と方法</h3>
         <p>日常生活の中で室内の滞在時間の長い住宅とオフィスを対象に、主観的ウェルビーイングに影響する構成要素のアンケートを実施し（有効回答数1,040 名）、相関分析によって住宅79 項目、オフィス70 項目、因子分析によって、住宅7 因子、オフィス7 因子の主観的ウェルビーイングに影響する構成要素を明らかにしました。</p>
         <p>本ツールは明らかにした構成要素をもとに、建築空間の構成要素を定量的かつ網羅的、具体的に提示し、主観的ウェルビーイングを高める空間づくりの要素をシミュレーションできるツールとして開発しました。<br>
         <a href="#" style="color:var(--accent-pos);">本調査についての詳細はこちら</a></p>
 
-        <h3>■ 本ツールの使い方</h3>
+        <h3>本ツールの使い方</h3>
         <ul>
             <li><strong>Target Psychology:</strong> 向上させたい心理的指標（幸福度、満足度、気分など）を選択します。</li>
             <li><strong>Attribute Filters:</strong> 対象となる居住者の性別、年代、居住地方を絞り込むことができます。</li>
@@ -161,13 +161,13 @@
             <li><strong>相関係数（Correlation）:</strong> 0.1以上を相関あり、0.2以上を弱い相関、0.4以上を中程度の相関として解釈します。</li>
         </ul>
 
-        <h3>■ 本ツールで採用している心理尺度について</h3>
+        <h3>本ツールで採用している心理尺度について</h3>
         <p><strong>・人生満足度尺度（SWLS）：</strong>Diener らが主観的幸福感を計る目的で開発したもので、比較的長いスパンにおける主観的幸福度を確認する尺度とされている。本調査では、以下5 項目について質問した。「ほとんどの面で、私の人生は私の理想に近い」「私の人生は、とてもすばらしい状態だ」「私は自分の人生に満足している」「私はこれまで、自分の人生に求める大切なものを得てきた」「もう一度人生をやり直せるとしても、ほとんど何も変えないだろう」</p>
         <p><strong>・主体性4項目：</strong>（※ここに項目の詳細が入ります）</p>
         <p><strong>・ポジティブ感情（PA）/ ネガティブ感情（NA）：</strong>David Watson & Lee Anna Clark らが開発した気分評価尺度（日本語版PANAS）。ポジティブ感情「活気のある」「誇らしい」「強気な」等8項目、ネガティブ感情「びくびくした」「うろたえた」「心配した」等8項目の計16項目について、過去1ヶ月の体験を質問した。</p>
         <p><strong>・幸せの4因子：</strong>前野らが提唱する国内の幸福研究の主要概念。本調査では短縮版（8項目）を採用。「私は有能である」「私は社会・組織の要請に応えている」「私は人の喜ぶ顔が見たい」「私を大切に思ってくれる人たちがいる」等の項目について質問した。</p>
 
-        <h3>■ ウェルビーイング空間設計プロジェクト（仮）メンバー</h3>
+        <h3>ウェルビーイング空間設計プロジェクト（仮）メンバー</h3>
         <p>前野隆司　武蔵野大学ウェルビーイング学部長・教授、慶應義塾大学名誉教授<br>
         山形与志樹　慶應義塾大学大学院システムデザイン・マネジメント研究科 教授<br>
         （※残りのメンバーの方々をここに追加してください）</p>
